--- a/vignettes/mapscanner.Rmd
+++ b/vignettes/mapscanner.Rmd
@@ -193,7 +193,7 @@ formats, but will be auto-converted from `.pdf` if needed. The package comes
 with two sample maps, both in `.png` format. The first is the reference version
 needed for rectification, while the second has two red lines drawn upon it:
 
-![](omaha-polygons.png)
+<img src="omaha-polygons.png" width="600" height="400"/>
 
 Converting the lines on this scanned image file is then as simple as:
 
@@ -207,10 +207,13 @@ The result of
 [`ms_rectify_maps()`](https://mpadge.github.io/mapscanner/reference/ms_rectify_maps.html)
 can be plotted using any standard option for plotting spatial data, such as
 through online mapping packages such as `mapview`:
-```{r mapview, eval = FALSE, echo = FALSE}
+```{r mapshot-polys, eval = TRUE, echo = FALSE}
 xy$id <- seq (nrow (xy))
-x <- mapview::mapview (xy)
-mapview::mapshot (x, file = "mapshot.png")
+if (!file.exists ("mapshot-polys.png"))
+{
+    x <- mapview::mapview (xy)
+    mapview::mapshot (x, file = "mapshot-polys.png")
+}
 ```
 ```{r mapview-fakey, eval = FALSE}
 xy$id <- seq (nrow (xy))
@@ -251,10 +254,13 @@ f_orig <- system.file ("extdata", "omaha.png", package = "mapscanner")
 f_mod <- system.file ("extdata", "omaha-polygons.png", package = "mapscanner")
 xy <- ms_rectify_maps (f_orig, f_mod, type = "hulls", quiet = TRUE)
 ```
-```{r mapview-hulls, eval = FALSE, echo = FALSE}
+```{r mapview-hulls, eval = TRUE, echo = FALSE}
 xy$id <- seq (nrow (xy))
-x <- mapview::mapview (xy)
-mapview::mapshot (x, file = "mapshot-hulls.png")
+if (!file.exists ("mapshot-hulls.png"))
+{
+    x <- mapview::mapview (xy)
+    mapview::mapshot (x, file = "mapshot-hulls.png")
+}
 ```
 ```{r mapview-hulls-fakey, eval = FALSE}
 xy$id <- seq (nrow (xy))
@@ -269,10 +275,13 @@ f_orig <- system.file ("extdata", "omaha.png", package = "mapscanner")
 f_mod <- system.file ("extdata", "omaha-polygons.png", package = "mapscanner")
 xy <- ms_rectify_maps (f_orig, f_mod, type = "points", quiet = TRUE)
 ```
-```{r mapview-points, eval = FALSE, echo = FALSE}
+```{r mapview-points, eval = TRUE, echo = FALSE}
 xy$id <- seq (nrow (xy))
-x <- mapview::mapview (xy)
-mapview::mapshot (x, file = "mapshot-points.png")
+if (!file.exists ("mapshot-points.png"))
+{
+    x <- mapview::mapview (xy)
+    mapview::mapshot (x, file = "mapshot-points.png")
+}
 ```
 ```{r mapview-points-fakey, eval = FALSE}
 xy$id <- seq (nrow (xy))
