--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,21 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 Print maps, draw on them, scan them back in, and convert to spatial objects.
+
+## installation
+
+`mapscanner` is not (yet) on CRAN. The development version can be installed with
+```{r install, eval = FALSE}
+remote::install_github("mpadge/mapscanner")
+```
+The package can then be loaded for usage in a R session with
+```{r library}
+library (mapscanner)
+```
+
+## usage
+
+
 Package comes with a sample map of Omaha, Nebraska, USA, and one with some red
 lines drawn on it:
 ![](./man/figures/omaha-polygons.png)
@@ -29,13 +44,11 @@ That's just a standard `png` image with no notion of geographical coordinates.
 The original map was generated with
 
 ```{r omaha-fakey, eval = FALSE}
-library (mapscanner)
 bbox <- rbind (c (-96.12923, -96.01011),
                c (41.26145, 41.32220)) # portion of omaha
 ms_generate_map (bbox, max_tiles = 16L, mapname = "omaha")
 ```
 ```{r omaha, echo = FALSE}
-library (mapscanner)
 bbox <- rbind (c (-96.12923, -96.01011),
                c (41.26145, 41.32220))
 message ("Successfully generated 'omaha.pdf' and 'omaha.png'")
